Hazel's sign up page, NO buttons yet

--- a/yourshare/src/App.css
+++ b/yourshare/src/App.css
@@ -3,7 +3,6 @@
   display: grid;
   width: 100%;
   height: 100%;
-
 }
 
 .App-link {
@@ -11,11 +10,9 @@
   text-decoration: underline;
 }
 
-.signUp{
+.signUp {
   display: grid;
-
 }
-
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -32,3 +29,24 @@
     transform: rotate(360deg);
   }
 }
+
+/* Hazel's  */
+.signUpPage {
+  margin: auto;
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+}
+.logoSignUpPage img {
+  width: 450px;
+  height: 450px;
+}
+.inputBoxText {
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border: 0px;
+  border-bottom: 2px solid black;
+}
+
+/* Hazel's done  */
