--- a/yourshare/src/components/Item.css
+++ b/yourshare/src/components/Item.css
@@ -7,10 +7,11 @@
     padding-top: 12px;
     width: 178px;
     height: 186px;
+    /* margin-top: 10px; */
 }
 
 .Item:hover{
-    background-color: rgb(129 199 9 / 40%);
+    background-color: rgba(255, 255, 255, 0.4);
     cursor: pointer;
 }
 
